# STM32-MCBoot

./: .gitignore  Jenkinsfile  LICENSE.md  ReadMe.md  todos.h  upload.sh
Application/: Application.ioc
Application/Core/Inc/: metadata.h  startup_confirm.h  stm32f1xx_hal_conf.h
Application/Core/Src/: main.c  metadata.c
Application/cmake/stm32cubemx/: CMakeLists.txt
Archive/Bootloader_F103RB/: CMakeLists.txt
BL_HW_AGN/: CMakeLists.txt  CMakePresets.json
BL_HW_AGN/bl_src/: main.c  main.h
BL_HW_AGN/cmake/boards/: g474re.cmake  h743zi.cmake
BL_HW_AGN/middleware/fwupdate/: metadata.c  metadata.h  uart_reception.c
BL_HW_AGN/platform/: platform.h
BL_HW_AGN/platform/pal/: pal_crc.h  pal_gpio.h  pal_iwdg.h  pal_uart.h
Bootloader_F103RB/: .gitignore  .mxproject  Bootloader_F103RB.ioc  Bootloader_F103RB_DMA.ioc  CMakeLists.txt
Bootloader_F103RB/Core/Inc/: stm32f1xx_hal_conf.h  uart_reception.h
Bootloader_F103RB/Core/Src/: main.c  stm32f1xx_hal_msp.c  uart_reception.c
Bootloader_F103RB_DMA/: Bootloader_F103RB_DMA.ioc  CMakeLists.txt
Python/: send_test.py  send_test_dma.py
Tools/: .gitignore  keygen.py  send_test_ab.py  sign_firmware.py
app/: .mxproject  CMakeLists.txt
app_zephyr/: .gitignore  CMakeLists.txt  prj.conf  west.yml
app_zephyr/src/: main.c
scripts/: keygen.py  send_test_ab.py
stmboot/: CMakeLists.txt  CMakePresets.json
stmboot/bl_src/: main.c
stmboot/boot/: main.c
stmboot/cmake/: gcc-arm-none-eabi.cmake
stmboot/platform/: platform.h
stmboot/tests/: CMakeLists.txt
stmboot/zephyr/: CMakeLists.txt  Kconfig  module.yml
(+56 files in other folders)
